tests/snapshots/snapshot_tests__snapshot_escape_xml_all_chars.snap
---
source: tests/snapshot_tests.rs
expression: "escape_xml(\"<tag attr=\\\"val\\\" & 'single'>\")"
---
&lt;tag attr=&quot;val&quot; &amp; &apos;single&apos;&gt;
