tests/snapshots/snapshot_tests__snapshot_escape_xml_clean_string.snap
---
source: tests/snapshot_tests.rs
expression: "escape_xml(\"Normal text 123\")"
---
Normal text 123
