tests/snapshots/snapshot_tests__snapshot_extract_xml_tag_value.snap
---
source: tests/snapshot_tests.rs
expression: "extract_xml_tag_value(xml, \"cStat\").unwrap()"
---
100
