tests/snapshots/snapshot_tests__snapshot_simple_tag.snap
---
source: tests/snapshot_tests.rs
expression: "tag(\"xNome\", &[], \"Test Company\".into())"
---
<xNome>Test Company</xNome>
