tests/snapshots/snapshot_tests__snapshot_tag_empty_children.snap
---
source: tests/snapshot_tests.rs
expression: "tag(\"emit\", &[], vec![].into())"
---
<emit></emit>
