tests/snapshots/snapshot_tests__snapshot_tag_self_closing_like.snap
---
source: tests/snapshot_tests.rs
expression: "tag(\"xMotivo\", &[], vec![].into())"
---
<xMotivo></xMotivo>
